--- a/Challenger/GoogleService-Info.plist
+++ b/Challenger/GoogleService-Info.plist
@@ -7,21 +7,21 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>703757857702-getijccvf9cpqi9rvh8fdaljecuj2in7.apps.googleusercontent.com</string>
+	<string>338054528316-se9cchgemtkqushkbq1t13rf2b80j0p4.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.703757857702-getijccvf9cpqi9rvh8fdaljecuj2in7</string>
+	<string>com.googleusercontent.apps.338054528316-se9cchgemtkqushkbq1t13rf2b80j0p4</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDU4KkT22v88dzqxjKBimsg9yogyKc2sps</string>
+	<string>AIzaSyD2uwyy228b_ZheuZeMs-sE8bKESMX87_A</string>
 	<key>GCM_SENDER_ID</key>
-	<string>703757857702</string>
+	<string>338054528316</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>IFCE.Challenger</string>
+	<string>br.bepid.challenge</string>
 	<key>PROJECT_ID</key>
-	<string>challenger-90f4d</string>
+	<string>challenge-efdc5</string>
 	<key>STORAGE_BUCKET</key>
-	<string>challenger-90f4d.appspot.com</string>
+	<string>challenge-efdc5.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<true></true>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -33,8 +33,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:703757857702:ios:88243eb6e115692b</string>
+	<string>1:338054528316:ios:51fae1ce4498a1b9</string>
 	<key>DATABASE_URL</key>
-	<string>https://challenger-90f4d.firebaseio.com</string>
+	<string>https://challenge-efdc5.firebaseio.com</string>
 </dict>
 </plist>
